--- a/Assets/Plugins/MenuCreator/MenuCreatorStylesheet.uss
+++ b/Assets/Plugins/MenuCreator/MenuCreatorStylesheet.uss
@@ -63,7 +63,7 @@
     flex-grow: 1;
     border-width: 0;
     color: rgb(213, 213, 213);
-    border-radius: 7;
+    border-radius: 7px;
     background-color: rgb(95, 124, 255);
     font-size: 12px;
     min-height: 25px;
@@ -72,7 +72,7 @@
     border-right-color: rgb(82, 107, 133);
     border-left-color: rgb(82, 107, 133);
     border-bottom-width: 3px;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     padding-left: 50px;
     padding-right: 50px;
     padding-top: 15px;
@@ -91,12 +91,12 @@
     flex-grow: 1;
     border-width: 0;
     color: rgb(97, 104, 122);
-    border-radius: 7;
+    border-radius: 7px;
     background-color: rgb(51, 58, 75);
     font-size: 12px;
     min-height: 25px;
     max-height: 25px;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
 }
 
 .unity-base-slider__tracker {
@@ -123,7 +123,7 @@
 
 .unity-base-slider__label {
     font-size: 10px;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     color: rgb(163, 170, 198);
 }
 
@@ -186,19 +186,19 @@
 
 .unity-toggle__label {
     font-size: 10px;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     align-self: center;
     justify-content: center;
     color: rgb(127, 149, 183);
     flex-grow: 1;
-    min-width: auto;
+    min-width: 0;
     margin-left: 10px;
 }
 
 .unity-float-field__label {
-    min-width: auto;
+    min-width: 0;
     font-size: 10px;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     color: rgb(127, 149, 183);
     flex-grow: 1;
     align-self: center;
@@ -207,10 +207,10 @@
 
 .unity-vector3-field__label {
     font-size: 10px;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     color: rgb(163, 170, 198);
     flex-grow: 1;
-    min-width: auto;
+    min-width: 0;
     max-width: 50px;
     align-self: center;
     justify-content: center;
@@ -219,8 +219,8 @@
 .unity-min-max-slider__label {
     color: rgb(163, 170, 198);
     font-size: 10px;
-    -unity-font-definition: none;
-    min-width: auto;
+    -unity-font-definition: initial;
+    min-width: 0;
     align-self: center;
     justify-content: center;
 }
@@ -253,19 +253,19 @@
     border-width: 0;
     border-radius: 5px;
     color: rgb(67, 83, 108);
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
 }
 
 .unity-foldout__input {
-    max-width: auto;
+    max-width: none;
 }
 
 .unity-foldout__text {
     color: rgb(120, 124, 144);
     font-size: 16px;
-    -unity-font-definition: none;
-    min-width: auto;
-    align-self: left;
+    -unity-font-definition: initial;
+    min-width: 0;
+    align-self: flex-start;
 }
 
 .ObjectPainterBlueprintIcon {
@@ -290,7 +290,7 @@
     border-right-width: 0;
     border-radius: 10px;
     border-bottom-width: 2px;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
 }
 
 .BlueprintSelectorWindow {
@@ -324,7 +324,7 @@
     font-size: 14px;
     border-width: 0;
     border-radius: 16px;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     min-width: auto;
     position: absolute;
     align-self: flex-end;
@@ -342,9 +342,9 @@
     width: 85px;
     height: 85px;
     border-radius: 10px;
-    border-width-top: 0;
-    border-width-left: 0;
-    border-width-right: 0;
+    border-top-width: 0;
+    border-left-width: 0;
+    border-right-width: 0;
     background-color: rgb(56, 64, 84);
     font-size: 12px;
     align-content: flex-end;
@@ -354,7 +354,7 @@
     border-right-color: rgb(82, 107, 133);
     border-left-color: rgb(82, 107, 133);
     border-bottom-width: 3px;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
 }
 
 .unity-list-view__item {
@@ -391,7 +391,7 @@
     flex-shrink: 1;
     flex-grow: 1;
     border-width: 0;
-    border-radius: 7;
+    border-radius: 7px;
     border-bottom-width: 3px;
     margin-bottom: 5px;
     margin-top: 5px;
@@ -440,7 +440,7 @@
     flex-shrink: 1;
     flex-grow: 1;
     border-width: 0;
-    border-radius: 7;
+    border-radius: 7px;
     border-bottom-width: 3px;
     margin-bottom: 5px;
     margin-top: 5px;
@@ -468,7 +468,7 @@
 
 .unity-text-field__input {
     margin-left: 2px;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     -unity-text-align: middle-left;
     background-color: rgb(226, 226, 238);
     border-top-left-radius: 10px;
@@ -553,10 +553,10 @@
     border-top-right-radius: 60px;
     border-bottom-right-radius: 60px;
     border-bottom-width: 5px;
-    border-bottom-color: rgb(75, 83, 101);
-    border-top-color: rgb(75, 83, 101);
-    border-right-color: rgb(75, 83, 101);
-    border-left-color: rgb(75, 83, 101);
+    border-bottom-color: rgb(223, 229, 242);
+    border-top-color: rgb(223, 229, 242);
+    border-right-color: rgb(223, 229, 242);
+    border-left-color: rgb(223, 229, 242);
     align-items: center;
     justify-content: center;
     display: flex;
@@ -593,7 +593,7 @@
     width: 80%;
     justify-content: center;
     align-items: center;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     position: absolute;
     top: 18.5%;
     color: rgb(176, 201, 241);
@@ -629,7 +629,7 @@
 
 .InteractWindow {
     position: absolute;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     background-color: rgb(255, 255, 255);
     flex-direction: row;
     width: auto;
@@ -659,7 +659,7 @@
 
 .PopupIconAmount {
     -unity-font-style: bold;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     font-size: 14px;
     color: rgb(255, 255, 255);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
@@ -866,7 +866,7 @@
 .LoadingLabel {
     -unity-font: resource('FlatSkin/Font/Roboto-Medium');
     position: absolute;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     color: rgb(127, 149, 183);
     bottom: 20%;
     width: 50%;
@@ -906,7 +906,7 @@
     max-height: 6%;
     min-height: 6%;
     width: 100%;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     -unity-text-align: middle-center;
     margin-left: 2px;
     margin-right: 2px;
@@ -924,7 +924,7 @@
     max-height: 6%;
     min-height: 6%;
     width: 100%;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     -unity-text-align: middle-left;
     margin-left: 4%;
     margin-right: 2px;
@@ -953,7 +953,7 @@
 
 .DamageNumber {
     -unity-font-style: bold;
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     align-content: center;
     align-self: center;
     -unity-text-align: middle-center;
@@ -1049,7 +1049,7 @@
     min-width: 45%;
     width: 45%;
     border-width: 0;
-    border-radius: 7;
+    border-radius: 7px;
     border-bottom-width: 3px;
     margin-bottom: 5px;
     margin-top: 5px;
@@ -1074,7 +1074,7 @@
 }
 
 .ButtonRemapLabel {
-    -unity-font-definition: none;
+    -unity-font-definition: initial;
     -unity-text-align: middle-center;
     font-size: 12px;
     width: 45%;
@@ -1087,6 +1087,7 @@
     border-color: aliceblue;
     border-width: 0;
     height: 35px;
+    border-left-color: rgb(255, 255, 255);
 }
 
 .ColorSelectionButton:hover {
